# swanky

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/field-binary/: Cargo.toml
crates/field-binary/src/: f128b.rs  f2.rs  f64b.rs  f8b.rs  lib.rs  small_binary_fields.rs
crates/field-f61p/: Cargo.toml
crates/field-f61p/src/: lib.rs
crates/field-ff-primes/: Cargo.toml  build.rs
crates/field-ff-primes/src/: lib.rs  prime_field_using_ff.rs
crates/field-test/: Cargo.toml
crates/field-test/src/: field.rs  lib.rs
crates/field/src/: field.rs  lib.rs  polynomial.rs
crates/flatbuffer-build/src/: lib.rs
crates/polynomial/: Cargo.toml
crates/polynomial/src/: lib.rs
crates/serialization/src/: impls.rs  lib.rs
diet-mac-and-cheese/: Cargo.toml  test_pac.sh  test_zkfl.sh
diet-mac-and-cheese/src/: backend.rs  backend_extfield.rs  backend_multifield.rs  backend_trait.rs  circuit_ir.rs  memory.rs  plaintext.rs  sieveir_reader_fbs.rs  sieveir_reader_text.rs  svole_thread.rs
diet-mac-and-cheese/src/dora/: comm.rs  tx.rs
etc/: deny.toml
etc/ci/: __init__.py  split_cobertura.py
etc/hooks/: pre-commit  pre-push
etc/lint/: rust.py
etc/nix/: sources.json
fancy-garbling/examples/: linear_oram.rs
fancy-garbling/src/: fancy.rs
humidor/: Cargo.toml
humidor/src/: params.rs  threshold_secret_sharing.rs
inferno/: Cargo.toml
inferno/src/: cache.rs  secretsharing.rs
ocelot/src/: lib.rs  utils.rs
popsicle/src/: cuckoo.rs  lib.rs  utils.rs
schmivitz/src/: all_but_one_vc.rs
scuttlebutt/src/: lib.rs
vectoreyes/src/: lib.rs
(+19 files in other folders)
